syntax = "proto3";

package go.micro.srv.GetUserOrder;

service Example {
	rpc GetUserOrder(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string Role = 2;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
	bytes Orders = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
